--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "mitt": "^3.0.1",
+    "native-notify": "^3.2.5",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-paper": "^5.11.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "expo-device": "~5.4.0",
+    "expo-notifications": "~0.20.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
