--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "axios": "^1.6.3",
     "expo": "~49.0.15",
+    "expo-device": "~5.4.0",
+    "expo-notifications": "~0.20.1",
     "expo-status-bar": "~1.6.0",
     "mitt": "^3.0.1",
     "native-notify": "^3.2.5",
@@ -26,9 +29,7 @@
     "react-native-paper": "^5.11.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-vector-icons": "^10.0.3",
-    "expo-device": "~5.4.0",
-    "expo-notifications": "~0.20.1"
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
