--- a/app.json
+++ b/app.json
@@ -34,6 +34,16 @@
       },
       "package": "com.vinitarane.myapp2"
     },
+    "plugins": [
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "usesCleartextTraffic": true
+          }
+        }
+      ]
+    ],
     "web": {
       "favicon": "./assets/favicon.png"
     },
