--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.3",
     "expo": "~49.0.15",
+    "expo-build-properties": "~0.8.3",
     "expo-device": "~5.4.0",
     "expo-notifications": "~0.20.1",
     "expo-status-bar": "~1.6.0",
@@ -26,11 +27,12 @@
     "native-notify": "^3.2.5",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-element-dropdown": "^2.10.1",
     "react-native-paper": "^5.11.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-vector-icons": "^10.0.3",
-    "expo-build-properties": "~0.8.3"
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
